--- a/src/pages/Component/Navbar/Navbar.css
+++ b/src/pages/Component/Navbar/Navbar.css
@@ -224,9 +224,9 @@ body.dark-mode #nav .navbar-nav.ms-auto a.cancel:hover {
   transition: all 0.3s ease;
 }
 
-body.dark-mode #nav .hamburger .line {
-  /* background-color: #ffffff; */
-}
+/* body.dark-mode #nav .hamburger .line {
+  background-color: #ffffff;
+} */
 
 /* Profile Container */
 .profile-container {
